--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
      />
 </head>
 <body>
-    
+    <header class="header">
+        <h1 class="header-logo-wrapper">
+            <img class="header-logo" src="./img/logo.svg" alt="Grand Players">
+        </h1>
+    </header>
 </body>
 </html>
